desenvolvendo a barra lateral + criação do menu no mobile

--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,7 @@ main {
   flex: 1; /* Faz o conteúdo principal ocupar o espaço restante */
 }
 
+.logoMobile {
+  filter: invert(1);
+  mix-blend-mode: screen;
+}
